Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,10 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Thu 14 April 2016</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrows-meeting-is-on-computational-morphology.html">Tomorrow&#8217;s Meeting is on Computational&nbsp;Morphology</a></dd>
+    <dt>Thu 31 March 2016</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/april-1st-cancellation.html">April 1st&nbsp;Cancellation</a></dd>
     <dt>Wed 09 March 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-change.html">Schedule&nbsp;Change</a></dd>
     <dt>Wed 02 March 2016</dt>
