--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Thu 14 April 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrows-meeting-is-on-computational-morphology.html">Tomorrow&#8217;s Meeting is on Computational&nbsp;Morphology</a></dd>
+    <dt><b>Thu 31 March 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/april-1st-cancellation.html">April 1st&nbsp;Cancellation</a></dd>
     <dt><b>Wed 09 March 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-change.html">Schedule&nbsp;Change</a></dd>
     <dt><b>Wed 02 March 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/aniellos-slides.html">Aniello&#8217;s&nbsp;Slides</a></dd>
     <dt><b>Wed 02 March 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/topology-without-tears-link.html">Topology Without Tears&nbsp;Link</a></dd>
-    <dt><b>Sat 13 February 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/handout-from-first-meeting.html">Handout from First&nbsp;Meeting</a></dd>
-    <dt><b>Fri 05 February 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/february-5th-cancellation.html">February 5th&nbsp;Cancellation</a></dd>
 </dl>
 		  </div>	
 		  
