Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Mon 02 May 2016</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/handouts-from-last-few-meetings.html">Handouts from Last Few&nbsp;Meetings</a></dd>
     <dt>Thu 14 April 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrows-meeting-is-on-computational-morphology.html">Tomorrow&#8217;s Meeting is on Computational&nbsp;Morphology</a></dd>
     <dt>Thu 31 March 2016</dt>
