--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -81,7 +81,7 @@
 <tr>
 <td>3/25</td>
 <td>James</td>
-<td></td>
+<td>Minimalist grammar parsing and pronoun reference</td>
 </tr>
 <tr>
 <td>4/1</td>
@@ -90,22 +90,22 @@
 </tr>
 <tr>
 <td>4/8</td>
-<td>Lei</td>
-<td></td>
+<td>Camillo</td>
+<td>Signaling games and cheap-talk games</td>
 </tr>
 <tr>
 <td>4/15</td>
-<td>Yaobin</td>
-<td></td>
+<td>Alena <span class="amp">&amp;</span> Sophie</td>
+<td>Subregular complexity of morphology</td>
 </tr>
 <tr>
 <td>4/22</td>
-<td>tbd</td>
-<td></td>
+<td>Gary</td>
+<td>Gödel&#8217;s modal logic proofs</td>
 </tr>
 <tr>
 <td>4/29</td>
-<td>tbd</td>
+<td>Yaobin <span class="amp">&amp;</span> So-Young</td>
 <td></td>
 </tr>
 </tbody>
