--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Mon 02 May 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/handouts-from-last-few-meetings.html">Handouts from Last Few&nbsp;Meetings</a></dd>
     <dt><b>Thu 14 April 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrows-meeting-is-on-computational-morphology.html">Tomorrow&#8217;s Meeting is on Computational&nbsp;Morphology</a></dd>
     <dt><b>Thu 31 March 2016</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-change.html">Schedule&nbsp;Change</a></dd>
     <dt><b>Wed 02 March 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/aniellos-slides.html">Aniello&#8217;s&nbsp;Slides</a></dd>
-    <dt><b>Wed 02 March 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/topology-without-tears-link.html">Topology Without Tears&nbsp;Link</a></dd>
 </dl>
 		  </div>	
 		  
