--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Mon 08 August 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/two-logic-classes-this-coming-fall.html">Two Logic Classes This Coming&nbsp;Fall</a></dd>
     <dt><b>Mon 02 May 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/handouts-from-last-few-meetings.html">Handouts from Last Few&nbsp;Meetings</a></dd>
     <dt><b>Thu 14 April 2016</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/april-1st-cancellation.html">April 1st&nbsp;Cancellation</a></dd>
     <dt><b>Wed 09 March 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-change.html">Schedule&nbsp;Change</a></dd>
-    <dt><b>Wed 02 March 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/aniellos-slides.html">Aniello&#8217;s&nbsp;Slides</a></dd>
 </dl>
 		  </div>	
 		  
@@ -76,6 +76,7 @@ Recent News
 	        <nav>
 	          <h2>Semester</h2>
 	          <ul>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
 	          </ul>
 	        </nav>
