--- a/authors.html
+++ b/authors.html
@@ -35,7 +35,7 @@
     <h1>Authors on MathLing@SBU</h1>
 
     <ul>        <li><a href="http://complab-stonybrook.github.io/mlrg/author/rob-pasternak.html">Rob Pasternak</a> (4)</li>
-        <li><a href="http://complab-stonybrook.github.io/mlrg/author/thomas.html">Thomas</a> (2)</li>
+        <li><a href="http://complab-stonybrook.github.io/mlrg/author/thomas.html">Thomas</a> (3)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/thomas-graf.html">Thomas Graf</a> (4)</li>
     </ul>
 		  </div>	
@@ -45,6 +45,7 @@
 	        <nav>
 	          <h2>Semester</h2>
 	          <ul>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
 	          </ul>
 	        </nav>
