--- a/categories.html
+++ b/categories.html
@@ -33,6 +33,7 @@
 
 		  <div role="main" class="content">
 <ul>
+    <li><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
     <li><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
 </ul>
 		  </div>	
@@ -42,6 +43,7 @@
 	        <nav>
 	          <h2>Semester</h2>
 	          <ul>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
 	          </ul>
 	        </nav>
