--- a/final-meeting-time.html
+++ b/final-meeting-time.html
@@ -80,6 +80,7 @@ When entering the 2nd  floor from the main stairs, immediately walk right past t
 	        <nav>
 	          <h2>Semester</h2>
 	          <ul>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li class="active"><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
 	          </ul>
 	        </nav>
