--- a/handout-from-first-meeting.html
+++ b/handout-from-first-meeting.html
@@ -62,6 +62,7 @@ Thanks again to Alejandro for all the work he put into&nbsp;them.</p>
 	        <nav>
 	          <h2>Semester</h2>
 	          <ul>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li class="active"><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
 	          </ul>
 	        </nav>
