--- a/schedule-change.html
+++ b/schedule-change.html
@@ -63,6 +63,7 @@ Note: my presentation is not related to game theory, so we&#8217;re temporarily 
 	        <nav>
 	          <h2>Semester</h2>
 	          <ul>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li class="active"><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
 	          </ul>
 	        </nav>
