--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 The group is very interdisciplinary in nature and we welcome guests from other&nbsp;departments.</p>
 <p>You can follow us by <a href="http://complab-stonybrook.github.io/mlrg/feeds/all.atom.xml">subscribing to our news feed</a>.</p>
 <h2>Current&nbsp;Semester</h2>
-<p><strong>Time</strong>: Friday 2:00-3:00pm<br />
+<p><strong>Time</strong>: tdb<br />
 <strong>Location</strong>: CompLab (<span class="caps">SBS</span> N-250)<br />
-<strong>Topic</strong>: Game Theory<br />
+<strong>Topic</strong>: tbd<br />
 <strong>Readings</strong>: <a href="https://drive.google.com/a/stonybrook.edu/folderview?id=0B09645QdWLiYVVRjSElwcVkwaTg&amp;usp=sharing">Google drive</a> (access restricted)<br />
-<strong>Student Organizer</strong>: Rob Pasternak<br />
+<strong>Student Organizers</strong>: tbd<br />
 <strong>Faculty Organizer</strong>: <a href="http://thomasgraf.net">Thomas&nbsp;Graf</a></p>		
 
 <h2>
