Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Tue 23 August 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/doodle-poll-for-meeting-time-fall-2016.html">Doodle Poll for Meeting Time Fall&nbsp;2016</a></dd>
     <dt><b>Mon 08 August 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/two-logic-classes-this-coming-fall.html">Two Logic Classes This Coming&nbsp;Fall</a></dd>
     <dt><b>Mon 02 May 2016</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrows-meeting-is-on-computational-morphology.html">Tomorrow&#8217;s Meeting is on Computational&nbsp;Morphology</a></dd>
     <dt><b>Thu 31 March 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/april-1st-cancellation.html">April 1st&nbsp;Cancellation</a></dd>
-    <dt><b>Wed 09 March 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-change.html">Schedule&nbsp;Change</a></dd>
 </dl>
 		  </div>	
 		  
