--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Tue 23 August 2016</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/doodle-poll-for-meeting-time-fall-2016.html">Doodle Poll for Meeting Time Fall&nbsp;2016</a></dd>
     <dt>Mon 08 August 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/two-logic-classes-this-coming-fall.html">Two Logic Classes This Coming&nbsp;Fall</a></dd>
     <dt>Mon 02 May 2016</dt>
