--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Mon 29 August 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-meeting-time.html">Fall 2016 Meeting&nbsp;time</a></dd>
     <dt><b>Tue 23 August 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/doodle-poll-for-meeting-time-fall-2016.html">Doodle Poll for Meeting Time Fall&nbsp;2016</a></dd>
     <dt><b>Mon 08 August 2016</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/handouts-from-last-few-meetings.html">Handouts from Last Few&nbsp;Meetings</a></dd>
     <dt><b>Thu 14 April 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrows-meeting-is-on-computational-morphology.html">Tomorrow&#8217;s Meeting is on Computational&nbsp;Morphology</a></dd>
-    <dt><b>Thu 31 March 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/april-1st-cancellation.html">April 1st&nbsp;Cancellation</a></dd>
 </dl>
 		  </div>	
 		  
