--- a/news10.html
+++ b/news10.html
@@ -44,6 +44,7 @@ On a given week, assume that we&#8217;ll be meeting unless the website says&nbsp
 <p>See you all&nbsp;Friday!</p>
 <p><em>Directions:</em> The CompLab is in <span class="caps">SBS</span> N-250.
 When entering the 2nd  floor from the main stairs, immediately walk right past the elevators towards the Professional Development sign and then take another right at the&nbsp;T-junction.</p>
+<p><strong>Update:</strong> The schedule for this semester is online. Note that if you are not in there but want to present something, there is still room for&nbsp;changes.</p>
       </article>
 
       <hr />
