--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -44,69 +44,69 @@
 </thead>
 <tbody>
 <tr>
-<td>2/5</td>
-<td>Rob</td>
-<td><del>Topology Primer</del>; cancelled due to weather</td>
-</tr>
-<tr>
-<td>2/12</td>
-<td>Alejandro</td>
-<td>Game Theory Primer</td>
-</tr>
-<tr>
-<td>2/19</td>
-<td>Rob</td>
-<td>Topology Primer</td>
-</tr>
-<tr>
-<td>2/26</td>
-<td>Aniello</td>
-<td>Signaling Games and Bidirectional <span class="caps">OT</span></td>
-</tr>
-<tr>
-<td>3/4</td>
-<td>Hwichan</td>
-<td>that-trace effects</td>
-</tr>
-<tr>
-<td>3/11</td>
+<td>9/9</td>
 <td>Thomas</td>
-<td><span class="caps">OT</span> and antimatroids</td>
+<td>tba</td>
 </tr>
 <tr>
-<td>3/18</td>
-<td>spring break</td>
-<td></td>
+<td>9/16</td>
+<td>Logan</td>
+<td>A Linea Algebra Primer</td>
 </tr>
 <tr>
-<td>3/25</td>
-<td>James</td>
-<td>Minimalist grammar parsing and pronoun reference</td>
+<td>9/23</td>
+<td>Aniello</td>
+<td>Model Theoretic Syntax: Intro</td>
 </tr>
 <tr>
-<td>4/1</td>
-<td>&#8212;-</td>
-<td><span class="caps">LSRL</span> conference</td>
+<td>9/30</td>
+<td>Aniello</td>
+<td>Model Theoretic Syntax</td>
 </tr>
 <tr>
-<td>4/8</td>
-<td>Camillo</td>
-<td>Signaling games and cheap-talk games</td>
+<td>10/7</td>
+<td>Thomas</td>
+<td>Categorial Grammars</td>
 </tr>
 <tr>
-<td>4/15</td>
-<td>Alena <span class="amp">&amp;</span> Sophie</td>
-<td>Subregular complexity of morphology</td>
+<td>10/14</td>
+<td>Thomas</td>
+<td>Categorial Grammars</td>
 </tr>
 <tr>
-<td>4/22</td>
+<td>10/21</td>
+<td>Alena</td>
+<td>tba</td>
+</tr>
+<tr>
+<td>10/28</td>
+<td>Jon</td>
+<td>Network theory</td>
+</tr>
+<tr>
+<td>11/4</td>
 <td>Gary</td>
-<td>Gödel&#8217;s modal logic proofs</td>
+<td>Chaos Theory (date subject to change)</td>
 </tr>
 <tr>
-<td>4/29</td>
-<td>Yaobin <span class="amp">&amp;</span> So-Young</td>
-<td></td>
+<td>11/11</td>
+<td>Gary</td>
+<td>Chaos Theory (date subject to change)</td>
+</tr>
+<tr>
+<td>11/18</td>
+<td>Adam</td>
+<td>tba</td>
+</tr>
+<tr>
+<td>11/25</td>
+<td>&#8212;-</td>
+<td>Thanksgiving break</td>
+</tr>
+<tr>
+<td>11/2</td>
+<td>Ayla</td>
+<td>tba</td>
 </tr>
 </tbody>
 </table>		
