Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 The group is very interdisciplinary in nature and we welcome guests from other&nbsp;departments.</p>
 <p>You can follow us by <a href="http://complab-stonybrook.github.io/mlrg/feeds/all.atom.xml">subscribing to our news feed</a>.</p>
 <h2>Current&nbsp;Semester</h2>
-<p><strong>Time</strong>: tdb<br />
+<p><strong>Time</strong>: Fri 1:15 - 2:15<br />
 <strong>Location</strong>: CompLab (<span class="caps">SBS</span> N-250)<br />
-<strong>Topic</strong>: tbd<br />
+<strong>Topic</strong>: Various (See Schedule for a detailed list)<br />
 <strong>Readings</strong>: <a href="https://drive.google.com/a/stonybrook.edu/folderview?id=0B09645QdWLiYVVRjSElwcVkwaTg&amp;usp=sharing">Google drive</a> (access restricted)<br />
-<strong>Student Organizers</strong>: tbd<br />
+<strong>Student Organizers</strong>: <a href="http://www.aaksenova.com/">Alëna Aksenova</a> <span class="amp">&amp;</span> <a href="https://linguistics.stonybrook.edu/students/aniello.de.santo">Aniello De Santo</a><br />
 <strong>Faculty Organizer</strong>: <a href="http://thomasgraf.net">Thomas&nbsp;Graf</a></p>		
 
 <h2>
