--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -51,7 +51,7 @@
 <tr>
 <td>9/16</td>
 <td>Logan</td>
-<td>A Linea Algebra Primer</td>
+<td>A Linear Algebra Primer</td>
 </tr>
 <tr>
 <td>9/23</td>
@@ -81,7 +81,7 @@
 <tr>
 <td>10/28</td>
 <td>Jon</td>
-<td>Network theory</td>
+<td>Network Theory</td>
 </tr>
 <tr>
 <td>11/4</td>
