Generate Pelican site

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -56,7 +56,7 @@
 <tr>
 <td>9/23</td>
 <td>Aniello</td>
-<td>Model Theoretic Syntax: Intro</td>
+<td>Model Theoretic Syntax</td>
 </tr>
 <tr>
 <td>9/30</td>
