Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Thu 22 September 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/model-theoretic-syntax-meeting.html">Model Theoretic Syntax&nbsp;meeting</a></dd>
     <dt><b>Mon 29 August 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-meeting-time.html">Fall 2016 Meeting&nbsp;time</a></dd>
     <dt><b>Tue 23 August 2016</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/two-logic-classes-this-coming-fall.html">Two Logic Classes This Coming&nbsp;Fall</a></dd>
     <dt><b>Mon 02 May 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/handouts-from-last-few-meetings.html">Handouts from Last Few&nbsp;Meetings</a></dd>
-    <dt><b>Thu 14 April 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrows-meeting-is-on-computational-morphology.html">Tomorrow&#8217;s Meeting is on Computational&nbsp;Morphology</a></dd>
 </dl>
 		  </div>	
 		  
