--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Thu 22 September 2016</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/model-theoretic-syntax-meeting.html">Model Theoretic Syntax&nbsp;meeting</a></dd>
     <dt>Mon 29 August 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-meeting-time.html">Fall 2016 Meeting&nbsp;time</a></dd>
     <dt>Tue 23 August 2016</dt>
