--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Fri 30 September 2016</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/model-theoretic-syntax-second-meeting-today.html">Model Theoretic Syntax: second meeting&nbsp;today</a></dd>
     <dt>Thu 22 September 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/model-theoretic-syntax-meeting.html">Model Theoretic Syntax&nbsp;meeting</a></dd>
     <dt>Mon 29 August 2016</dt>
