Generate Pelican site

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -74,9 +74,9 @@
 <td>Categorial Grammars</td>
 </tr>
 <tr>
-<td>10/21</td>
-<td>Alena</td>
-<td>tba</td>
+<td><del>10/21</del></td>
+<td><del>Alena</del></td>
+<td><del>tba</del>     (Cancelled)</td>
 </tr>
 <tr>
 <td>10/28</td>
