--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Thu 13 October 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/second-meeting-on-categorial-grammars.html">Second Meeting on Categorial&nbsp;Grammars</a></dd>
     <dt><b>Fri 30 September 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/model-theoretic-syntax-second-meeting-today.html">Model Theoretic Syntax: second meeting&nbsp;today</a></dd>
     <dt><b>Thu 22 September 2016</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-meeting-time.html">Fall 2016 Meeting&nbsp;time</a></dd>
     <dt><b>Tue 23 August 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/doodle-poll-for-meeting-time-fall-2016.html">Doodle Poll for Meeting Time Fall&nbsp;2016</a></dd>
-    <dt><b>Mon 08 August 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/two-logic-classes-this-coming-fall.html">Two Logic Classes This Coming&nbsp;Fall</a></dd>
 </dl>
 		  </div>	
 		  
