Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Wed 26 October 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/friday-meeting-on-network-theory.html">Friday Meeting on Network&nbsp;Theory</a></dd>
     <dt><b>Thu 13 October 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/second-meeting-on-categorial-grammars.html">Second Meeting on Categorial&nbsp;Grammars</a></dd>
     <dt><b>Fri 30 September 2016</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/model-theoretic-syntax-meeting.html">Model Theoretic Syntax&nbsp;meeting</a></dd>
     <dt><b>Mon 29 August 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-meeting-time.html">Fall 2016 Meeting&nbsp;time</a></dd>
-    <dt><b>Tue 23 August 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/doodle-poll-for-meeting-time-fall-2016.html">Doodle Poll for Meeting Time Fall&nbsp;2016</a></dd>
 </dl>
 		  </div>	
 		  
