Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Tue 01 November 2016</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/gary-mar-on-chaos-theory.html">Gary Mar on Chaos&nbsp;Theory</a></dd>
     <dt>Wed 26 October 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/friday-meeting-on-network-theory.html">Friday Meeting on Network&nbsp;Theory</a></dd>
     <dt>Thu 13 October 2016</dt>
