Generate Pelican site

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -90,13 +90,13 @@
 </tr>
 <tr>
 <td>11/11</td>
-<td>Gary</td>
-<td>Chaos Theory (date subject to change)</td>
+<td>Adam</td>
+<td>Randomness in Algorithmic and Quantum Information Theory</td>
 </tr>
 <tr>
 <td>11/18</td>
-<td>Adam</td>
-<td>tba</td>
+<td>Open Slot</td>
+<td>Open Slot</td>
 </tr>
 <tr>
 <td>11/25</td>
@@ -105,8 +105,8 @@
 </tr>
 <tr>
 <td>11/2</td>
-<td>Ayla</td>
-<td>tba</td>
+<td>Open Slot</td>
+<td>Open Slot</td>
 </tr>
 </tbody>
 </table>		
