Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Mon 07 November 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-change-and-future-meetings.html">Schedule Change and Future&nbsp;Meetings</a></dd>
     <dt><b>Tue 01 November 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/gary-mar-on-chaos-theory.html">Gary Mar on Chaos&nbsp;Theory</a></dd>
     <dt><b>Wed 26 October 2016</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/second-meeting-on-categorial-grammars.html">Second Meeting on Categorial&nbsp;Grammars</a></dd>
     <dt><b>Fri 30 September 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/model-theoretic-syntax-second-meeting-today.html">Model Theoretic Syntax: second meeting&nbsp;today</a></dd>
-    <dt><b>Thu 22 September 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/model-theoretic-syntax-meeting.html">Model Theoretic Syntax&nbsp;meeting</a></dd>
 </dl>
 		  </div>	
 		  
