--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -86,7 +86,7 @@
 <tr>
 <td>11/4</td>
 <td>Gary</td>
-<td>Chaos Theory (date subject to change)</td>
+<td>Chaos Theory</td>
 </tr>
 <tr>
 <td>11/11</td>
@@ -96,7 +96,7 @@
 <tr>
 <td>11/18</td>
 <td>Open Slot</td>
-<td>Open Slot</td>
+<td></td>
 </tr>
 <tr>
 <td>11/25</td>
@@ -106,7 +106,7 @@
 <tr>
 <td>11/2</td>
 <td>Open Slot</td>
-<td>Open Slot</td>
+<td></td>
 </tr>
 </tbody>
 </table>		
