--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Mon 07 November 2016</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-change-and-future-meetings.html">Schedule Change and Future&nbsp;Meetings</a></dd>
     <dt>Tue 01 November 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/gary-mar-on-chaos-theory.html">Gary Mar on Chaos&nbsp;Theory</a></dd>
     <dt>Wed 26 October 2016</dt>
