Generate Pelican site

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -95,8 +95,8 @@
 </tr>
 <tr>
 <td>11/18</td>
-<td>Open Slot</td>
-<td></td>
+<td>Thomas</td>
+<td>Subregular Semantics</td>
 </tr>
 <tr>
 <td>11/25</td>
