Generate Pelican site

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -104,9 +104,14 @@
 <td>Thanksgiving break</td>
 </tr>
 <tr>
-<td>11/2</td>
-<td>Open Slot</td>
-<td></td>
+<td>12/2</td>
+<td>&#8212;-</td>
+<td>(Cancelled)</td>
+</tr>
+<tr>
+<td>12/9</td>
+<td>&#8212;-</td>
+<td>Spring Semester Organizational Meeting</td>
 </tr>
 </tbody>
 </table>		
