--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Tue 29 November 2016</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-cancelled.html">Next Meeting&nbsp;Cancelled</a></dd>
     <dt>Wed 16 November 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/this-friday-thomas-on-subregular-semantics.html">This Friday: Thomas on Subregular&nbsp;Semantics</a></dd>
     <dt>Mon 07 November 2016</dt>
