--- a/news8.html
+++ b/news8.html
@@ -39,7 +39,7 @@
         <h1><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-cancelled.html">Next Meeting&nbsp;Cancelled</a></h1>
         <p>Hi&nbsp;all!</p>
 <p>This week we will have no meeting, due to end-of-semester scheduling conflicts.
-We will meet once last time before the Winter Break, on Friday 9th - to discuss topics/organizational issues for next&nbsp;semester.</p>
+We will meet one last time before the Winter Break, on Friday 9th - to discuss topics/organizational issues for next&nbsp;semester.</p>
 <p>Have a great&nbsp;week.</p>
       </article>
 
