--- a/next-meeting-cancelled.html
+++ b/next-meeting-cancelled.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="Thomas Graf">
 	
 
-	<meta name="description" content="Hi all! This week we will have no meeting, due to end-of-semester scheduling conflicts. We will meet once last time before the Winter Break, on Friday 9th - to discuss topics/organizational issues for next semester. Have a great week.">
+	<meta name="description" content="Hi all! This week we will have no meeting, due to end-of-semester scheduling conflicts. We will meet one last time before the Winter Break, on Friday 9th - to discuss topics/organizational issues for next semester. Have a great week.">
 
 
 	<link rel="top" href="#" /><link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic,400italic,600italic|Source+Code+Pro' rel='stylesheet' type='text/css'></link>
@@ -48,7 +48,7 @@
 </div>		
 		<p>Hi&nbsp;all!</p>
 <p>This week we will have no meeting, due to end-of-semester scheduling conflicts.
-We will meet once last time before the Winter Break, on Friday 9th - to discuss topics/organizational issues for next&nbsp;semester.</p>
+We will meet one last time before the Winter Break, on Friday 9th - to discuss topics/organizational issues for next&nbsp;semester.</p>
 <p>Have a great&nbsp;week.</p>	
 
 	</article>
