Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Thu 08 December 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-final-meeting.html">Fall 2016 Final&nbsp;Meeting</a></dd>
     <dt><b>Tue 29 November 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-cancelled.html">Next Meeting&nbsp;Cancelled</a></dd>
     <dt><b>Wed 16 November 2016</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-change-and-future-meetings.html">Schedule Change and Future&nbsp;Meetings</a></dd>
     <dt><b>Tue 01 November 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/gary-mar-on-chaos-theory.html">Gary Mar on Chaos&nbsp;Theory</a></dd>
-    <dt><b>Wed 26 October 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/friday-meeting-on-network-theory.html">Friday Meeting on Network&nbsp;Theory</a></dd>
 </dl>
 		  </div>	
 		  
