--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Thu 08 December 2016</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-final-meeting.html">Fall 2016 Final&nbsp;Meeting</a></dd>
     <dt>Tue 29 November 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-cancelled.html">Next Meeting&nbsp;Cancelled</a></dd>
     <dt>Wed 16 November 2016</dt>
