Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -38,6 +38,8 @@
     <dt>Thu 08 December 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-final-meeting.html">Fall 2016 Final&nbsp;Meeting</a></dd>
     <dt>Tue 29 November 2016</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/babalabla.html">babalabla</a></dd>
+    <dt>Tue 29 November 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-cancelled.html">Next Meeting&nbsp;Cancelled</a></dd>
     <dt>Wed 16 November 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/this-friday-thomas-on-subregular-semantics.html">This Friday: Thomas on Subregular&nbsp;Semantics</a></dd>
@@ -89,6 +91,7 @@
 	          <ul>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2017-spring.html">2017-Spring</a></li>
 	          </ul>
 	        </nav>
 
