--- a/gary-mar-on-chaos-theory.html
+++ b/gary-mar-on-chaos-theory.html
@@ -69,6 +69,7 @@ Gary also sent me a paper he contributed to the Alonzo Church memorial volume. C
 	          <ul>
 	              <li class="active"><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2017-spring.html">2017-Spring</a></li>
 	          </ul>
 	        </nav>
 
