--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@ Recent News
     <dt><b>Thu 08 December 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-final-meeting.html">Fall 2016 Final&nbsp;Meeting</a></dd>
     <dt><b>Tue 29 November 2016</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/babalabla.html">babalabla</a></dd>
+    <dt><b>Tue 29 November 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-cancelled.html">Next Meeting&nbsp;Cancelled</a></dd>
     <dt><b>Wed 16 November 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/this-friday-thomas-on-subregular-semantics.html">This Friday: Thomas on Subregular&nbsp;Semantics</a></dd>
     <dt><b>Mon 07 November 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-change-and-future-meetings.html">Schedule Change and Future&nbsp;Meetings</a></dd>
-    <dt><b>Tue 01 November 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/gary-mar-on-chaos-theory.html">Gary Mar on Chaos&nbsp;Theory</a></dd>
 </dl>
 		  </div>	
 		  
@@ -78,6 +78,7 @@ Recent News
 	          <ul>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2017-spring.html">2017-Spring</a></li>
 	          </ul>
 	        </nav>
 
