--- a/doodle-poll-for-meeting-time-fall-2016.html
+++ b/doodle-poll-for-meeting-time-fall-2016.html
@@ -76,6 +76,7 @@ For this semester, a few topics have been&nbsp;suggested:</p>
 	          <ul>
 	              <li class="active"><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2017-spring.html">2017-Spring</a></li>
 	          </ul>
 	        </nav>
 
