--- a/final-meeting-time.html
+++ b/final-meeting-time.html
@@ -82,6 +82,7 @@ When entering the 2nd  floor from the main stairs, immediately walk right past t
 	          <ul>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li class="active"><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2017-spring.html">2017-Spring</a></li>
 	          </ul>
 	        </nav>
 
