--- a/pages/history.html
+++ b/pages/history.html
@@ -76,6 +76,7 @@ So far, the following topics have been&nbsp;covered:</p>
 	          <ul>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-fall.html">2016-Fall</a></li>
 	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2016-spring.html">2016-Spring</a></li>
+	              <li ><a href="http://complab-stonybrook.github.io/mlrg/category/2017-spring.html">2017-Spring</a></li>
 	          </ul>
 	        </nav>
 
