Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -35,10 +35,12 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Mon 06 February 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/the-next-meeting.html">The Next&nbsp;Meeting</a></dd>
+    <dt>Tue 24 January 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/spring-2017-the-first-meeting.html">Spring 2017: the first&nbsp;meeting!</a></dd>
     <dt>Thu 08 December 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-final-meeting.html">Fall 2016 Final&nbsp;Meeting</a></dd>
-    <dt>Tue 29 November 2016</dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/babalabla.html">babalabla</a></dd>
     <dt>Tue 29 November 2016</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-cancelled.html">Next Meeting&nbsp;Cancelled</a></dd>
     <dt>Wed 16 November 2016</dt>
