--- a/authors.html
+++ b/authors.html
@@ -34,7 +34,8 @@
 		  <div role="main" class="content">
     <h1>Authors on MathLing@SBU</h1>
 
-    <ul>        <li><a href="http://complab-stonybrook.github.io/mlrg/author/aniello-de-santo.html">Aniello De Santo</a> (12)</li>
+    <ul>        <li><a href="http://complab-stonybrook.github.io/mlrg/author/alena-aksenova.html">Alena Aksenova</a> (2)</li>
+        <li><a href="http://complab-stonybrook.github.io/mlrg/author/aniello-de-santo.html">Aniello De Santo</a> (11)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/rob-pasternak.html">Rob Pasternak</a> (4)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/thomas.html">Thomas</a> (3)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/thomas-graf.html">Thomas Graf</a> (4)</li>
