--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Mon 06 February 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/the-next-meeting.html">The Next&nbsp;Meeting</a></dd>
+    <dt><b>Tue 24 January 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/spring-2017-the-first-meeting.html">Spring 2017: the first&nbsp;meeting!</a></dd>
     <dt><b>Thu 08 December 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-final-meeting.html">Fall 2016 Final&nbsp;Meeting</a></dd>
-    <dt><b>Tue 29 November 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/babalabla.html">babalabla</a></dd>
     <dt><b>Tue 29 November 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-cancelled.html">Next Meeting&nbsp;Cancelled</a></dd>
     <dt><b>Wed 16 November 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/this-friday-thomas-on-subregular-semantics.html">This Friday: Thomas on Subregular&nbsp;Semantics</a></dd>
-    <dt><b>Mon 07 November 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-change-and-future-meetings.html">Schedule Change and Future&nbsp;Meetings</a></dd>
 </dl>
 		  </div>	
 		  
