--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -44,74 +44,64 @@
 </thead>
 <tbody>
 <tr>
-<td>9/9</td>
+<td>2/17</td>
 <td>Thomas</td>
-<td>Modal Logic</td>
+<td>Intro to Categorial Grammars</td>
 </tr>
 <tr>
-<td>9/16</td>
-<td>Logan</td>
-<td>A Linear Algebra Primer</td>
-</tr>
-<tr>
-<td>9/23</td>
+<td>2/24</td>
 <td>Aniello</td>
-<td>Model Theoretic Syntax</td>
+<td>tba</td>
 </tr>
 <tr>
-<td>9/30</td>
-<td>Aniello</td>
-<td>Model Theoretic Syntax</td>
+<td>3/3</td>
+<td>Alëna</td>
+<td>Parsing and Categorial Grammars</td>
 </tr>
 <tr>
-<td>10/7</td>
-<td>Thomas</td>
-<td>Categorial Grammars</td>
+<td>3/10</td>
+<td>Sophie</td>
+<td>Categorial Grammars and moprphology</td>
 </tr>
 <tr>
-<td>10/14</td>
-<td>Thomas</td>
-<td>Categorial Grammars</td>
-</tr>
-<tr>
-<td><del>10/21</del></td>
-<td><del>Alena</del></td>
-<td><del>tba</del>     (Cancelled)</td>
-</tr>
-<tr>
-<td>10/28</td>
-<td>Jon</td>
-<td>Network Theory</td>
-</tr>
-<tr>
-<td>11/4</td>
-<td>Gary</td>
-<td>Chaos Theory</td>
-</tr>
-<tr>
-<td>11/11</td>
-<td>Adam</td>
-<td>Randomness in Algorithmic and Quantum Information Theory</td>
-</tr>
-<tr>
-<td>11/18</td>
-<td>Thomas</td>
-<td>Subregular Semantics</td>
-</tr>
-<tr>
-<td>11/25</td>
+<td>3/17</td>
 <td>&#8212;-</td>
-<td>Thanksgiving break</td>
+<td>spring break</td>
 </tr>
 <tr>
-<td>12/2</td>
+<td>3/24</td>
 <td>&#8212;-</td>
-<td>(Cancelled)</td>
+<td>spring break</td>
 </tr>
 <tr>
-<td>12/9</td>
-<td>&#8212;-</td>
-<td>Spring Semester Organizational Meeting</td>
+<td>3/31</td>
+<td>tba</td>
+<td>tba</td>
+</tr>
+<tr>
+<td>4/7</td>
+<td>tba</td>
+<td>tba</td>
+</tr>
+<tr>
+<td>4/14</td>
+<td>tba</td>
+<td>tba</td>
+</tr>
+<tr>
+<td>4/21</td>
+<td>tba</td>
+<td>tba</td>
+</tr>
+<tr>
+<td>4/28</td>
+<td>tba</td>
+<td>tba</td>
+</tr>
+<tr>
+<td>5/5</td>
+<td>tba</td>
+<td>Fall 2017 Organizational Meeting</td>
 </tr>
 </tbody>
 </table>		
