Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Fri 24 February 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-semantics-in-ccgs.html">Next Meeting: Semantics in&nbsp;CCGs</a></dd>
     <dt><b>Tue 14 February 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/reminder-first-meeting-this-friday.html">Reminder: first meeting this&nbsp;Friday</a></dd>
     <dt><b>Mon 06 February 2017</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/spring-2017-the-first-meeting.html">Spring 2017: the first&nbsp;meeting!</a></dd>
     <dt><b>Thu 08 December 2016</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/fall-2016-final-meeting.html">Fall 2016 Final&nbsp;Meeting</a></dd>
-    <dt><b>Tue 29 November 2016</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-cancelled.html">Next Meeting&nbsp;Cancelled</a></dd>
 </dl>
 		  </div>	
 		  
