--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -51,7 +51,7 @@
 <tr>
 <td>2/24</td>
 <td>Aniello</td>
-<td>tba</td>
+<td>Semantics in <span class="caps">CCG</span></td>
 </tr>
 <tr>
 <td>3/3</td>
@@ -61,7 +61,7 @@
 <tr>
 <td>3/10</td>
 <td>Sophie</td>
-<td>Categorial Grammars and moprphology</td>
+<td>Categorial Grammars and morphology</td>
 </tr>
 <tr>
 <td>3/17</td>
