Generate Pelican site

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -71,21 +71,21 @@
 <tr>
 <td>3/24</td>
 <td>&#8212;-</td>
-<td>spring break</td>
+<td>cancelled</td>
 </tr>
 <tr>
 <td>3/31</td>
 <td>tba</td>
-<td>tba</td>
+<td>Guest Talk (subject to change)</td>
 </tr>
 <tr>
 <td>4/7</td>
-<td>tba</td>
-<td>tba</td>
+<td>Hwichan</td>
+<td>Gapping <span class="amp">&amp;</span>  CGs</td>
 </tr>
 <tr>
 <td>4/14</td>
-<td>tba</td>
+<td>Thomas</td>
 <td>tba</td>
 </tr>
 <tr>
