--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Wed 08 March 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/last-meeting-before-spring-break.html">Last Meeting before Spring&nbsp;Break</a></dd>
     <dt><b>Thu 02 March 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrow-meeting-on-ccg-parsing.html">Tomorrow meeting on <span class="caps">CCG</span>&nbsp;Parsing</a></dd>
     <dt><b>Fri 24 February 2017</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/reminder-first-meeting-this-friday.html">Reminder: first meeting this&nbsp;Friday</a></dd>
     <dt><b>Mon 06 February 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/the-next-meeting.html">The Next&nbsp;Meeting</a></dd>
-    <dt><b>Tue 24 January 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/spring-2017-the-first-meeting.html">Spring 2017: the first&nbsp;meeting!</a></dd>
 </dl>
 		  </div>	
 		  
