Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Wed 15 March 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/spring-break.html">Spring&nbsp;Break</a></dd>
     <dt><b>Wed 08 March 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/last-meeting-before-spring-break.html">Last Meeting before Spring&nbsp;Break</a></dd>
     <dt><b>Thu 02 March 2017</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-semantics-in-ccgs.html">Next Meeting: Semantics in&nbsp;CCGs</a></dd>
     <dt><b>Tue 14 February 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/reminder-first-meeting-this-friday.html">Reminder: first meeting this&nbsp;Friday</a></dd>
-    <dt><b>Mon 06 February 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/the-next-meeting.html">The Next&nbsp;Meeting</a></dd>
 </dl>
 		  </div>	
 		  
