Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Wed 22 March 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/no-meeting-this-week.html">No meeting this&nbsp;week!</a></dd>
     <dt>Wed 15 March 2017</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/spring-break.html">Spring&nbsp;Break</a></dd>
     <dt>Wed 08 March 2017</dt>
