--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Wed 22 March 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/no-meeting-this-week.html">No meeting this&nbsp;week!</a></dd>
     <dt><b>Wed 15 March 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/spring-break.html">Spring&nbsp;Break</a></dd>
     <dt><b>Wed 08 March 2017</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrow-meeting-on-ccg-parsing.html">Tomorrow meeting on <span class="caps">CCG</span>&nbsp;Parsing</a></dd>
     <dt><b>Fri 24 February 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/next-meeting-semantics-in-ccgs.html">Next Meeting: Semantics in&nbsp;CCGs</a></dd>
-    <dt><b>Tue 14 February 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/reminder-first-meeting-this-friday.html">Reminder: first meeting this&nbsp;Friday</a></dd>
 </dl>
 		  </div>	
 		  
