Generate Pelican site

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -75,8 +75,8 @@
 </tr>
 <tr>
 <td>3/31</td>
-<td>tba</td>
-<td>Guest Talk (subject to change)</td>
+<td>Thomas</td>
+<td>Graph transductions and typological gaps</td>
 </tr>
 <tr>
 <td>4/7</td>
@@ -85,7 +85,7 @@
 </tr>
 <tr>
 <td>4/14</td>
-<td>Thomas</td>
+<td>tba</td>
 <td>tba</td>
 </tr>
 <tr>
