--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Wed 05 April 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/this-friday-hwichan-on-gapping-ling-colloquium.html">This Friday: Hwichan on Gapping + Ling.&nbsp;Colloquium</a></dd>
     <dt><b>Thu 30 March 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/this-friday-thomas-on-graph-transductions.html">This Friday: Thomas on Graph&nbsp;Transductions!</a></dd>
     <dt><b>Wed 22 March 2017</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/spring-break.html">Spring&nbsp;Break</a></dd>
     <dt><b>Wed 08 March 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/last-meeting-before-spring-break.html">Last Meeting before Spring&nbsp;Break</a></dd>
-    <dt><b>Thu 02 March 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/tomorrow-meeting-on-ccg-parsing.html">Tomorrow meeting on <span class="caps">CCG</span>&nbsp;Parsing</a></dd>
 </dl>
 		  </div>	
 		  
