Generate Pelican site

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -85,22 +85,22 @@
 </tr>
 <tr>
 <td>4/14</td>
-<td>tba</td>
-<td>tba</td>
+<td>Adam</td>
+<td>Higher-Order Cellular Automata</td>
 </tr>
 <tr>
 <td>4/21</td>
-<td>tba</td>
-<td>tba</td>
+<td>&#8212;-</td>
+<td>cancelled</td>
 </tr>
 <tr>
 <td>4/28</td>
-<td>tba</td>
-<td>tba</td>
+<td>Gary</td>
+<td>A Chart Parsing Account of Scope Ambiguities</td>
 </tr>
 <tr>
 <td>5/5</td>
-<td>tba</td>
+<td>Everyone</td>
 <td>Fall 2017 Organizational Meeting</td>
 </tr>
 </tbody>
