--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,10 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Mon 01 May 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/last-meeting.html">Last&nbsp;Meeting!</a></dd>
+    <dt>Fri 28 April 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/gary-and-his-chart-parsing-idea.html">Gary and his Chart Parsing&nbsp;idea!</a></dd>
     <dt>Thu 20 April 2017</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/no-meeting-tomorrow.html">No meeting&nbsp;tomorrow!</a></dd>
     <dt>Thu 13 April 2017</dt>
