--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Mon 01 May 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/last-meeting.html">Last&nbsp;Meeting!</a></dd>
+    <dt><b>Fri 28 April 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/gary-and-his-chart-parsing-idea.html">Gary and his Chart Parsing&nbsp;idea!</a></dd>
     <dt><b>Thu 20 April 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/no-meeting-tomorrow.html">No meeting&nbsp;tomorrow!</a></dd>
     <dt><b>Thu 13 April 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/adam-on-higher-order-cellular-automata.html">Adam on  Higher-Order Cellular&nbsp;Automata</a></dd>
     <dt><b>Wed 05 April 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/this-friday-hwichan-on-gapping-ling-colloquium.html">This Friday: Hwichan on Gapping + Ling.&nbsp;Colloquium</a></dd>
-    <dt><b>Thu 30 March 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/this-friday-thomas-on-graph-transductions.html">This Friday: Thomas on Graph&nbsp;Transductions!</a></dd>
-    <dt><b>Wed 22 March 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/no-meeting-this-week.html">No meeting this&nbsp;week!</a></dd>
 </dl>
 		  </div>	
 		  
