Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Fri 06 October 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/geometric-representations-for-minimalist-grammar.html">Geometric Representations for Minimalist&nbsp;Grammar</a></dd>
+    <dt><b>Mon 25 September 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/tensor-product-representations-and-harmonic-grammar.html">Tensor Product Representations and Harmonic&nbsp;Grammar</a></dd>
+    <dt><b>Mon 18 September 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/perceptrons.html">Perceptrons</a></dd>
     <dt><b>Wed 13 September 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/aniello-on-geometrical-morphology.html">Aniello on Geometrical&nbsp;Morphology</a></dd>
     <dt><b>Mon 04 September 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-and-next-meeting.html">Schedule and Next&nbsp;meeting</a></dd>
-    <dt><b>Mon 01 May 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/last-meeting.html">Last&nbsp;Meeting!</a></dd>
-    <dt><b>Fri 28 April 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/gary-and-his-chart-parsing-idea.html">Gary and his Chart Parsing&nbsp;idea!</a></dd>
-    <dt><b>Thu 20 April 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/no-meeting-tomorrow.html">No meeting&nbsp;tomorrow!</a></dd>
 </dl>
 		  </div>	
 		  
