--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,12 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Fri 06 October 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/geometric-representations-for-minimalist-grammar.html">Geometric Representations for Minimalist&nbsp;Grammar</a></dd>
+    <dt>Mon 25 September 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/tensor-product-representations-and-harmonic-grammar.html">Tensor Product Representations and Harmonic&nbsp;Grammar</a></dd>
+    <dt>Mon 18 September 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/perceptrons.html">Perceptrons</a></dd>
     <dt>Wed 13 September 2017</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/aniello-on-geometrical-morphology.html">Aniello on Geometrical&nbsp;Morphology</a></dd>
     <dt>Mon 04 September 2017</dt>
