Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -35,8 +35,10 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Fri 13 October 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/jeff-on-backpropagation-and-stochastic-gradient-descent.html">Jeff on Backpropagation and Stochastic Gradient&nbsp;Descent</a></dd>
     <dt>Fri 06 October 2017</dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/geometric-representations-for-minimalist-grammar.html">Geometric Representations for Minimalist&nbsp;Grammar</a></dd>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/jon-on-geometric-representations-of-minimalist-grammars.html">Jon on Geometric representations of Minimalist&nbsp;Grammars</a></dd>
     <dt>Mon 25 September 2017</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/tensor-product-representations-and-harmonic-grammar.html">Tensor Product Representations and Harmonic&nbsp;Grammar</a></dd>
     <dt>Mon 18 September 2017</dt>
