--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Fri 13 October 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/jeff-on-backpropagation-and-stochastic-gradient-descent.html">Jeff on Backpropagation and Stochastic Gradient&nbsp;Descent</a></dd>
     <dt><b>Fri 06 October 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/geometric-representations-for-minimalist-grammar.html">Geometric Representations for Minimalist&nbsp;Grammar</a></dd>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/jon-on-geometric-representations-of-minimalist-grammars.html">Jon on Geometric representations of Minimalist&nbsp;Grammars</a></dd>
     <dt><b>Mon 25 September 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/tensor-product-representations-and-harmonic-grammar.html">Tensor Product Representations and Harmonic&nbsp;Grammar</a></dd>
     <dt><b>Mon 18 September 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/perceptrons.html">Perceptrons</a></dd>
     <dt><b>Wed 13 September 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/aniello-on-geometrical-morphology.html">Aniello on Geometrical&nbsp;Morphology</a></dd>
-    <dt><b>Mon 04 September 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-and-next-meeting.html">Schedule and Next&nbsp;meeting</a></dd>
 </dl>
 		  </div>	
 		  
