--- a/authors.html
+++ b/authors.html
@@ -36,7 +36,9 @@
 
     <ul>        <li><a href="http://complab-stonybrook.github.io/mlrg/author/alena-aksenova.html">Alena Aksenova</a> (2)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/aniello-de-santo.html">Aniello De Santo</a> (23)</li>
-        <li><a href="http://complab-stonybrook.github.io/mlrg/author/jon-rawski.html">Jon Rawski</a> (4)</li>
+        <li><a href="http://complab-stonybrook.github.io/mlrg/author/jeffrey-heinz.html">Jeffrey Heinz</a> (1)</li>
+        <li><a href="http://complab-stonybrook.github.io/mlrg/author/jn-rawski.html">Jn Rawski</a> (1)</li>
+        <li><a href="http://complab-stonybrook.github.io/mlrg/author/jon-rawski.html">Jon Rawski</a> (3)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/rob-pasternak.html">Rob Pasternak</a> (4)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/thomas.html">Thomas</a> (3)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/thomas-graf.html">Thomas Graf</a> (5)</li>
