Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -36,6 +36,7 @@
 
     <ul>        <li><a href="http://complab-stonybrook.github.io/mlrg/author/alena-aksenova.html">Alena Aksenova</a> (2)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/aniello-de-santo.html">Aniello De Santo</a> (23)</li>
+        <li><a href="http://complab-stonybrook.github.io/mlrg/author/enes-avcu.html">Enes Avcu</a> (1)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/jeffrey-heinz.html">Jeffrey Heinz</a> (1)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/jn-rawski.html">Jn Rawski</a> (1)</li>
         <li><a href="http://complab-stonybrook.github.io/mlrg/author/jon-rawski.html">Jon Rawski</a> (3)</li>
