--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Fri 20 October 2017</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/enes-avcu-udelaware-on-evolution-of-neural-networks.html">Enes Avcu (UDelaware) on &#8220;Evolution of Neural&nbsp;networks&#8221;</a></dd>
     <dt>Fri 13 October 2017</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/jeff-on-backpropagation-and-stochastic-gradient-descent.html">Jeff on Backpropagation and Stochastic Gradient&nbsp;Descent</a></dd>
     <dt>Fri 06 October 2017</dt>
