Generate Pelican site

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -71,41 +71,41 @@
 <tr>
 <td>10/13</td>
 <td>Jeff</td>
-<td>Neural Networks and Grammar Pt. 1</td>
+<td>Neural Networks, Stochastic Gradient Descent, and Backpropagation</td>
 </tr>
 <tr>
 <td>10/20</td>
-<td>Jeff</td>
-<td>Neural Networks and Grammar Pt. 2</td>
+<td>Enes (Udel)</td>
+<td>Evolution of Neural Networks</td>
 </tr>
 <tr>
 <td>10/27</td>
 <td>Mai Ha (Udel)</td>
-<td><span class="caps">TBA</span></td>
+<td>Intro to Model-Theoretic Syntax</td>
 </tr>
 <tr>
 <td>11/3</td>
 <td>Alena</td>
-<td><span class="caps">TBA</span></td>
+<td>Formal Restrictions on Multiple Tiers</td>
 </tr>
 <tr>
 <td>11/10</td>
-<td><span class="caps">TBA</span></td>
+<td>Canceled</td>
 <td><span class="caps">TBA</span></td>
 </tr>
 <tr>
 <td>11/17</td>
-<td>Sophie</td>
-<td><span class="caps">TBA</span></td>
+<td>Hossep</td>
+<td>Computing Reduplication: Typology and learning</td>
 </tr>
 <tr>
 <td>12/1</td>
-<td>Thomas</td>
-<td>Graph Theory</td>
+<td>Hossep</td>
+<td>Computing Reduplication: Typology and learning</td>
 </tr>
 <tr>
 <td>12/8</td>
-<td><span class="caps">TBA</span></td>
+<td>Sophie</td>
 <td><span class="caps">TBA</span></td>
 </tr>
 </tbody>
