--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Mon 27 November 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/hossep-continuing-on-reduplication.html">Hossep Continuing on&nbsp;Reduplication</a></dd>
+    <dt><b>Wed 22 November 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/sam-van-gool-tutorial.html">Sam van Gool&nbsp;Tutorial</a></dd>
     <dt><b>Fri 17 November 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/hossep-on-computing-reduplication-typology-and-learning.html">Hossep on &#8220;Computing Reduplication: Typology and&nbsp;Learning&#8221;</a></dd>
+    <dt><b>Fri 10 November 2017</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/no-meeting-on-nov-10.html">No Meeting on Nov&nbsp;10</a></dd>
     <dt><b>Fri 03 November 2017</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/alena-on-formal-restrictions-on-multiple-tiers.html">Alena on &#8220;Formal Restrictions on Multiple&nbsp;Tiers&#8221;</a></dd>
-    <dt><b>Fri 27 October 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/mai-ha-vu-udelaware-on-model-theoretic-syntax.html">Mai Ha Vu (UDelaware) on &#8220;Model-Theoretic&nbsp;Syntax&#8221;</a></dd>
-    <dt><b>Fri 20 October 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/enes-avcu-udelaware-on-evolution-of-neural-networks.html">Enes Avcu (UDelaware) on &#8220;Evolution of Neural&nbsp;networks&#8221;</a></dd>
-    <dt><b>Fri 13 October 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/jeff-on-backpropagation-and-stochastic-gradient-descent.html">Jeff on Backpropagation and Stochastic Gradient&nbsp;Descent</a></dd>
 </dl>
 		  </div>	
 		  
