Generate Pelican site

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -44,69 +44,69 @@
 </thead>
 <tbody>
 <tr>
-<td>9/8</td>
-<td>Gary</td>
-<td>A Brief History of the Logic of Time</td>
-</tr>
-<tr>
-<td>9/15</td>
-<td>Aniello</td>
-<td>Geometrical Morphology</td>
-</tr>
-<tr>
-<td>9/22</td>
-<td>Thomas</td>
-<td>Perceptrons</td>
-</tr>
-<tr>
-<td>9/29</td>
-<td>Jon</td>
-<td>Harmony Theory and Harmonic Grammar</td>
-</tr>
-<tr>
-<td>10/6</td>
-<td>Jon</td>
-<td>Tensor Product Representations</td>
-</tr>
-<tr>
-<td>10/13</td>
+<td>2/2</td>
 <td>Jeff</td>
-<td>Neural Networks, Stochastic Gradient Descent, and Backpropagation</td>
+<td>Intro to Automata Theory</td>
 </tr>
 <tr>
-<td>10/20</td>
-<td>Enes (Udel)</td>
-<td>Evolution of Neural Networks</td>
+<td>2/9</td>
+<td><span class="caps">TBD</span></td>
+<td>Automata Theory</td>
 </tr>
 <tr>
-<td>10/27</td>
-<td>Mai Ha (Udel)</td>
-<td>Intro to Model-Theoretic Syntax</td>
+<td>2/16</td>
+<td><span class="caps">TBD</span></td>
+<td>Graph Theory</td>
 </tr>
 <tr>
-<td>11/3</td>
-<td>Alena</td>
-<td>Formal Restrictions on Multiple Tiers</td>
+<td>2/23</td>
+<td><span class="caps">TBD</span></td>
+<td>Graph Theory</td>
 </tr>
 <tr>
-<td>11/10</td>
-<td>Canceled</td>
-<td><span class="caps">TBA</span></td>
+<td>3/2</td>
+<td>Rob</td>
+<td>Category Theory</td>
 </tr>
 <tr>
-<td>11/17</td>
-<td>Hossep</td>
-<td>Computing Reduplication: Typology and learning</td>
+<td>3/9</td>
+<td><span class="caps">TBD</span></td>
+<td>Category Theory</td>
 </tr>
 <tr>
-<td>12/1</td>
-<td>Hossep</td>
-<td>Computing Reduplication: Typology and learning</td>
+<td>3/23</td>
+<td><span class="caps">TBD</span></td>
+<td>Automata Theory</td>
 </tr>
 <tr>
-<td>12/8</td>
-<td>Sophie</td>
-<td><span class="caps">TBA</span></td>
+<td>3/30</td>
+<td><span class="caps">TBD</span></td>
+<td>Automata Theory</td>
+</tr>
+<tr>
+<td>4/6</td>
+<td><span class="caps">TBD</span></td>
+<td>Graph Theory</td>
+</tr>
+<tr>
+<td>4/13</td>
+<td><span class="caps">TBD</span></td>
+<td>Graph Theory</td>
+</tr>
+<tr>
+<td>4/20</td>
+<td><span class="caps">TBD</span></td>
+<td>Category Theory</td>
+</tr>
+<tr>
+<td>4/27</td>
+<td><span class="caps">TBD</span></td>
+<td>Category Theory</td>
+</tr>
+<tr>
+<td>5/4</td>
+<td><span class="caps">TBD</span></td>
+<td><span class="caps">TBD</span></td>
 </tr>
 </tbody>
 </table>		
