--- a/pages/history.html
+++ b/pages/history.html
@@ -45,6 +45,10 @@ So far, the following topics have been&nbsp;covered:</p>
 </thead>
 <tbody>
 <tr>
+<td>2018 Spring</td>
+<td>Automata Theory, Graph Theory, Category Theory</td>
+</tr>
+<tr>
 <td>2017 Fall</td>
 <td>Linear Algebra, Neural Networks, Graph Theory</td>
 </tr>
