Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,14 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Fri 23 March 2018</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/discussion-on-advances-in-tier-based-strict-locality.html">Discussion on Advances in Tier-Based Strict&nbsp;Locality</a></dd>
+    <dt>Fri 09 March 2018</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree&nbsp;Transducers</a></dd>
+    <dt>Fri 02 March 2018</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/thomas-on-tree-transducers.html">Thomas on Tree&nbsp;Transducers</a></dd>
+    <dt>Fri 23 February 2018</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/adam-on-category-theory.html">Adam on Category&nbsp;Theory</a></dd>
     <dt>Tue 13 February 2018</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/rob-on-category-theory.html">Rob on Category&nbsp;Theory</a></dd>
     <dt>Fri 02 February 2018</dt>
