--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Fri 23 March 2018</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/discussion-on-advances-in-tier-based-strict-locality.html">Discussion on Advances in Tier-Based Strict&nbsp;Locality</a></dd>
+    <dt><b>Fri 09 March 2018</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree&nbsp;Transducers</a></dd>
+    <dt><b>Fri 02 March 2018</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/thomas-on-tree-transducers.html">Thomas on Tree&nbsp;Transducers</a></dd>
+    <dt><b>Fri 23 February 2018</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/adam-on-category-theory.html">Adam on Category&nbsp;Theory</a></dd>
     <dt><b>Tue 13 February 2018</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/rob-on-category-theory.html">Rob on Category&nbsp;Theory</a></dd>
-    <dt><b>Fri 02 February 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-and-meeting-time.html">Schedule and Meeting&nbsp;Time</a></dd>
-    <dt><b>Fri 26 January 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/schedule-and-first-meeting.html">Schedule and First&nbsp;Meeting</a></dd>
-    <dt><b>Mon 27 November 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/hossep-continuing-on-reduplication.html">Hossep Continuing on&nbsp;Reduplication</a></dd>
-    <dt><b>Wed 22 November 2017</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/sam-van-gool-tutorial.html">Sam van Gool&nbsp;Tutorial</a></dd>
 </dl>
 		  </div>	
 		  
