--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -60,23 +60,23 @@
 </tr>
 <tr>
 <td>2/23</td>
-<td><span class="caps">TBD</span></td>
-<td>Category Theory</td>
+<td>Adam</td>
+<td>Category Theory and Ologs</td>
 </tr>
 <tr>
 <td>3/2</td>
-<td><span class="caps">TBD</span></td>
-<td>Graph Theory</td>
+<td>Thomas</td>
+<td>Tree languages and transducers</td>
 </tr>
 <tr>
 <td>3/9</td>
-<td><span class="caps">TBD</span></td>
-<td>Graph Theory</td>
+<td>Thomas</td>
+<td>Tree Transducers Continued</td>
 </tr>
 <tr>
 <td>3/23</td>
-<td><span class="caps">TBD</span></td>
-<td>Automata Theory</td>
+<td>Open Discussion</td>
+<td>New frontiers in Tier-Based Strict Locality</td>
 </tr>
 <tr>
 <td>3/30</td>
